--- a/DataSorter/src/main/java/database/Proxmus/Podzial_redukcji.form
+++ b/DataSorter/src/main/java/database/Proxmus/Podzial_redukcji.form
@@ -3,25 +3,33 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="482" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="618b1" class="javax.swing.JButton" binding="asymetryczneButton" default-binding="true">
+      <component id="e9b28" class="javax.swing.JButton" binding="asymetryczneButton">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <horizontalTextPosition value="0"/>
+          <icon value="Redukcja_a.png"/>
+          <iconTextGap value="0"/>
           <text value="Asymetryczne"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
-      <component id="17464" class="javax.swing.JButton" binding="symetryczneButton" default-binding="true">
+      <component id="31b38" class="javax.swing.JButton" binding="symetryczneButton">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <horizontalTextPosition value="0"/>
+          <icon value="Redukcja_s.png"/>
+          <iconTextGap value="0"/>
           <text value="Symetryczne"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
     </children>
