--- a/DataSorter/src/main/java/database/Proxmus/Swing.form
+++ b/DataSorter/src/main/java/database/Proxmus/Swing.form
@@ -3,51 +3,75 @@
   <grid id="27dc6" binding="panel_main" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="1413" height="451"/>
     </constraints>
-    <properties/>
+    <properties>
+      <alignmentX value="0.5"/>
+      <alignmentY value="0.5"/>
+      <maximumSize width="200" height="200"/>
+      <minimumSize width="200" height="200"/>
+      <preferredSize width="200" height="200"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="6f340" class="javax.swing.JButton" binding="kolanaButton">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="73" height="30"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Kolana"/>
-        </properties>
-      </component>
       <component id="667" class="javax.swing.JButton" binding="korkiButton" default-binding="true">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <horizontalTextPosition value="0"/>
+          <icon value="Korek.png"/>
+          <iconTextGap value="0"/>
           <text value="Korki"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
-      <component id="2d5d6" class="javax.swing.JButton" binding="redukcjeButton" default-binding="true">
+      <component id="49c44" class="javax.swing.JButton" binding="mufyButton">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Redukcje"/>
-        </properties>
-      </component>
-      <component id="43c52" class="javax.swing.JButton" binding="trojnikiButton">
-        <constraints>
-          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Trójniki"/>
-        </properties>
-      </component>
-      <component id="7841f" class="javax.swing.JButton" binding="mufyButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
+          <horizontalTextPosition value="0"/>
+          <icon value="Mufa.png"/>
+          <iconTextGap value="0"/>
           <text value="Mufy"/>
+          <verticalTextPosition value="3"/>
+        </properties>
+      </component>
+      <component id="ab7f0" class="javax.swing.JButton" binding="kolanaButton">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <horizontalTextPosition value="0"/>
+          <icon value="Kolano.png"/>
+          <iconTextGap value="0"/>
+          <text value="Kolana"/>
+          <verticalTextPosition value="3"/>
+        </properties>
+      </component>
+      <component id="fb82e" class="javax.swing.JButton" binding="redukcjeButton">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <horizontalTextPosition value="0"/>
+          <icon value="Redukcja_s.png"/>
+          <iconTextGap value="0"/>
+          <text value="Redukcje"/>
+          <verticalTextPosition value="3"/>
+        </properties>
+      </component>
+      <component id="dbdc6" class="javax.swing.JButton" binding="trojnikiButton">
+        <constraints>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <horizontalTextPosition value="0"/>
+          <icon value="Trojnik_rownoramienny.png"/>
+          <iconTextGap value="0"/>
+          <text value="Mufy"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
     </children>
