--- a/TrackAdmin/src/main/resources/templates/normalUser.html
+++ b/TrackAdmin/src/main/resources/templates/normalUser.html
@@ -12,7 +12,7 @@
     <div class="navbar-left">
         <select id="project" name="project">
             <option value="" disabled selected>Wybierz projekt</option>
-            <option value="">Wybierz wszystko</option>
+            <option value="" id="chooseAll">Wybierz wszystko</option>
             <!--            JavaScript          -->
         </select>
 
