--- a/TrackAdmin/src/main/resources/templates/normalUser.html
+++ b/TrackAdmin/src/main/resources/templates/normalUser.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +11,7 @@
     <div class="navbar-left">
         <select id="project" name="project">
             <option value="" disabled selected>Wybierz projekt</option>
-            <option value="" id="chooseAll">Wybierz wszystko</option>
+
             <!--            JavaScript          -->
         </select>
 
@@ -22,7 +21,7 @@
         </select>
     </div>
     <div class="navbar-right">
-        <button id="logoutButton" onclick="logout()">Wyloguj</button>
+        <button id="logoutButton">Wyloguj</button>
     </div>
 </div>
 
@@ -41,15 +40,12 @@
 </div>
 
 <div class="footer">
-    <p>Zalogowano jako: <span>Nieznany użytkownik</span></p>
+    <p>Zalogowany użytkownik: <span id="loggedInUserEmail" th:text="${loggedInUserEmail}"></span></p>
 </div>
-<script type="text/javascript" src="/JS/normalUser/selectLoggedUser.js"></script>
+
 <script type="text/javascript" src="/JS/normalUser/selectProjectsAndDivision.js"></script>
 <script type="text/javascript" src="/JS/normalUser/showAndUpdateTable.js"></script>
-<script>
-    function logout() {
-        window.location.href = "/user/login";
-    }
-</script>
+<script type="text/javascript" src="/JS/login/login.js"></script>
+
 </body>
 </html>
