--- a/TrackAdmin/src/main/resources/templates/adminUser.html
+++ b/TrackAdmin/src/main/resources/templates/adminUser.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/jpeg" href="/ICONS/icon.jpg">
     <link rel="stylesheet" href="/CSS/AdminUser/main.css">
-    <title>NormalUserPage</title>
+    <title>AdminUserPage</title>
 </head>
 <body>
 <div class="navbar">
