--- a/TrackTables/src/main/resources/templates/adminUser.html
+++ b/TrackTables/src/main/resources/templates/adminUser.html
@@ -21,6 +21,11 @@
         </select>
     </div>
     <div class="navbar-right">
+        <div class="addProject">
+            <input type="text" id="newProject" placeholder="Nazwa projektu">
+            <button id="addProjectButton">Dodaj</button>
+        </div>
+        <button id="saveAll">Zapisz wszytsko</button>
         <button id="logoutButton">Wyloguj</button>
     </div>
 </div>
@@ -45,5 +50,6 @@
 <script type="text/javascript" src="/JS/adminUser/selectProjectsAndDivision.js"></script>
 <script type="text/javascript" src="/JS/adminUser/showAndUpdateTable.js"></script>
 <script type="text/javascript" src="/JS/login/login.js"></script>
+<script type="text/javascript" src="/JS/adminUser/projects.js"></script>
 </body>
 </html>
