--- a/TrackTables/src/main/resources/templates/superAdminUser.html
+++ b/TrackTables/src/main/resources/templates/superAdminUser.html
@@ -214,7 +214,7 @@
                 <select id="updateDivisionSelect">
                     <option value="" disabled selected>Wybierz dzial do aktualizacji</option>
                 </select>
-                <input type="text" id="updateDivisionName" placeholder="Nowa nazwa dywizji">
+                <input type="text" id="updateDivisionName" placeholder="Nowa nazwa działu">
                 <button id="updateDivisionButton">Aktualizuj</button>
             </div>
 
