--- a/TrackTables/src/main/resources/templates/superAdminUser.html
+++ b/TrackTables/src/main/resources/templates/superAdminUser.html
@@ -241,12 +241,12 @@
 <div class="footer">
     <p>Kopiuj operacje z działu do drugiego dzialu</p>
 
-    <select id="dzialFrom">
-        <option value="">Wybierz dział:</option>
+    <select id="projectFrom">
+        <option value="">Wybierz projekt:</option>
     </select>
-    <select id="dzialTo">
+    <select id="projectTo">
 
-        <option value="">Skopjuj do działu:</option>
+        <option value="">Skopjuj do projekt:</option>
     </select>
 
     <button id="copyButton">Kopiuj</button>
