--- a/TrackTables/src/main/resources/templates/adminUser.html
+++ b/TrackTables/src/main/resources/templates/adminUser.html
@@ -9,7 +9,7 @@
 <body>
 <div class="navbar">
     <div class="navbar-left">
-        <select id="project" name="project">
+        <select id="project" name="project" class="input-project">
             <option value="" disabled selected>Wybierz projekt</option>
 
             <!--            JavaScript          -->
